BANNER: New website at https://r-ega.net

Changes in version 2.0.2

o FIX: ties for max gain in `TMFG`

o FIX: continuous variables with few categories that are treated as ordinal in `polychoric.matrix`

o ADD: website pointing to different data check errors added to error output (hopefully, makes errors more understandable)

o UPDATE: `corr = "cor_auto"` now performs `qgraph::cor_auto` in favor of legacy; previous behavior starting at 2.0.0 was to deprecate `"cor_auto"` in favor of `"auto"`; default remains `corr = "auto"`

o UPDATE: `compare.EGA.plots` outputs `$all` and `$individual` for the plots


Changes in version 2.0.1

o updated the polychoric C code to avoid out-of-bounds access errors


Changes in version 2.0.0

o MAJOR REFACTOR: the update to version 2.0.0 includes many major changes that are designed to improve the speed, reliability, and reproducibility of {EGAnet}. The goal of these changes are to eliminate common errors and streamline the code in the package to prevent future error cases. There are several function additions that are provided to facilitate modular use of the {EGAnet} package

o INTERNALS: function-specific internal functions and S3methods are now located in their respective .R files rather than elsewhere (e.g., "utils-EGAnet.R")

o SWAP: internal script usage of "utils-EGAnet.R" depracated for "helper.R" functions that are used across the package (no visible changes for the user)

o NOTE: default objective function for Leiden algorithm is set to "modularity"

o NOTE: default for Louvain unidimensional method is set to single-shot *unless* argument "consensus.method" or "consensus.iter" is specified

o ADD: stricter `*apply` functions that are roughly equivalent to `*apply` but have stricter inputs/outputs (uses `vapply` as foundation; often, slightly faster)

o ADD: `community.consensus` to apply the Consensus Clustering approach introduced by Lancichnetti & Fortunato (2012). Currently only available for the Louvain algorithm
